@@ -1,3 +1,8 @@
+Tue Jul 22 10:41:36 2003  Joseph Heled  <pepster@users.sourceforge.net>
+
+	* html.c (printStatTableMissed): don't print '(-0.000 ( -0.000%))'
+	in HTML output. 
+
 Mon Jul 21 23:05:10 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkboard.c (write_points): fix bug when writing boards
